crates/cockpitctl-ingest/tests/snapshots/snapshot_mixed_verdicts__pipeline_all_four_verdicts.snap
---
source: crates/cockpitctl-ingest/tests/snapshot_mixed_verdicts.rs
expression: result.report
---
{
  "schema": "cockpit.report.v1",
  "tool": {
    "name": "test",
    "version": "1.0.0"
  },
  "run": {
    "started_at": "2026-02-01T00:00:00Z"
  },
  "verdict": {
    "status": "fail",
    "counts": {
      "info": 0,
      "warn": 1,
      "error": 2
    },
    "reasons": []
  },
  "sensors": [
    {
      "id": "build",
      "blocking": true,
      "missing": "fail",
      "presence": "present",
      "report_path": "artifacts/build/report.json",
      "verdict": {
        "status": "pass",
        "counts": {
          "info": 0,
          "warn": 0,
          "error": 0
        },
        "reasons": []
      },
      "truncated": false,
      "errors": [],
      "policy_outcome": "allowed"
    },
    {
      "id": "lint",
      "blocking": true,
      "missing": "fail",
      "presence": "present",
      "report_path": "artifacts/lint/report.json",
      "verdict": {
        "status": "fail",
        "counts": {
          "info": 0,
          "warn": 0,
          "error": 2
        },
        "reasons": []
      },
      "truncated": false,
      "errors": [],
      "policy_outcome": "blocked"
    },
    {
      "id": "coverage",
      "blocking": false,
      "missing": "warn",
      "presence": "present",
      "report_path": "artifacts/coverage/report.json",
      "verdict": {
        "status": "warn",
        "counts": {
          "info": 0,
          "warn": 1,
          "error": 0
        },
        "reasons": []
      },
      "truncated": false,
      "errors": [],
      "policy_outcome": "informational"
    },
    {
      "id": "optional",
      "blocking": false,
      "missing": "skip",
      "presence": "present",
      "report_path": "artifacts/optional/report.json",
      "verdict": {
        "status": "skip",
        "counts": {
          "info": 0,
          "warn": 0,
          "error": 0
        },
        "reasons": []
      },
      "truncated": false,
      "errors": [],
      "policy_outcome": "informational"
    }
  ],
  "highlights": [
    {
      "sensor_id": "lint",
      "finding": {
        "severity": "error",
        "code": "lint/err1",
        "message": "Message for lint/err1",
        "location": {
          "path": "src/main.rs",
          "line": 10
        },
        "fingerprint": "52fb6bbbd8d9503866dbeb7fe60e9a87a2f2ffb0549a507abd716fd53d3a04f3"
      }
    },
    {
      "sensor_id": "lint",
      "finding": {
        "severity": "error",
        "code": "lint/err2",
        "message": "Message for lint/err2",
        "location": {
          "path": "src/main.rs",
          "line": 20
        },
        "fingerprint": "04b54c4070cb84abc0f1ee7b74e7e46209f44eaf903bbb9218596bff396f1f7d"
      }
    },
    {
      "sensor_id": "coverage",
      "finding": {
        "severity": "warn",
        "code": "cov/low",
        "message": "Message for cov/low",
        "location": {
          "path": "src/lib.rs",
          "line": 1
        },
        "fingerprint": "6eecc43501a16ffea40821bbd69d980f3d9f60a55cb7f0564a9579660508f145"
      }
    }
  ],
  "policy": {
    "warn_is_fail": false,
    "max_highlights": 7,
    "max_per_sensor_findings": 20,
    "max_annotations": 25,
    "section_order": [
      "Build",
      "Lint",
      "Coverage",
      "Optional"
    ],
    "sensors": [
      {
        "id": "build",
        "blocking": true,
        "missing": "fail",
        "section": "Build"
      },
      {
        "id": "coverage",
        "blocking": false,
        "missing": "warn",
        "section": "Coverage"
      },
      {
        "id": "lint",
        "blocking": true,
        "missing": "fail",
        "section": "Lint"
      },
      {
        "id": "optional",
        "blocking": false,
        "missing": "skip",
        "section": "Optional"
      }
    ]
  }
}
